appId: com.skylightsocial.tatum
---
- launchApp
- tapOn: "PROFILE"
- tapOn: "Safe Space"
- assertVisible: "A private place for your desire."
